--- a/src/components/App/style.scss
+++ b/src/components/App/style.scss
@@ -14,7 +14,9 @@ body {
 }
 
 .sidebar5 {
-  width: 250px;
+  flex-basis: 250px;
+  flex-grow: 0;
+  flex-shrink: 0;
   background-color: white;
   border-right: rgba(34,36,38,.1) 1px solid;
 }
