--- a/src/components/ModalCreateTodo/style.scss
+++ b/src/components/ModalCreateTodo/style.scss
@@ -9,4 +9,14 @@
       margin-left: 0.75rem;
     }
   }
+  .group.equal.width {
+    .field {
+      flex-grow: initial;
+      flex-shrink: initial;
+      width: 260px;
+      &:first-of-type {
+        flex-grow: 1;
+      }
+    }
+  }
 }
